--- a/server/Gemfile
+++ b/server/Gemfile
@@ -1,6 +1,10 @@
 source 'https://rubygems.org'
+
+# general stuff
 gem 'promise'
 gem 'sinatra'
 gem 'sinatra-json'
+
+# development gems
 gem 'rake', :groups => [ :development, :test ]
 gem 'rspec', :require => 'spec', :groups => [ :development, :test ]
